priv/lib-src/_components.filters.scss
.c-filters {
    margin-bottom: 2em;

    label {
        display: block;
        font-size: 0.825em;
    }

    @include breakpoint($mediumBreakpoint) {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 100%;
    }
}

.c-btn-filter-submit {
    display: none;
}

.c-filters__options {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    gap: 1rem;
    width: 100%;
    margin: 2em 0 0;

    label {
        width: 100%;
    }

    @include breakpoint($mediumBreakpoint) {
        width: fit-content;
        flex-flow: row nowrap;
        margin: 0 0 0 auto;

        label {
            width: auto;
        }
    }
}

.c-filters__date {
    position: relative;
    
    label {
        display: block;
        font-size: 0.825em;
    }

    input[type="date"] {
        background: var(--lightTheme);
        cursor: pointer;
        color: light-dark(var(--darkTheme), var(--typographyColor));

        &::-webkit-calendar-picker-indicator {
            cursor: inherit;
            color: inherit;
        }
    }
}

.c-custom-select {
    width: calc(100% - 5.5rem);
    position: relative;

    select {
        width: 100%;
        appearance: none;
        background: var(--lightTheme);
        color: light-dark(var(--darkTheme), var(--typographyColor));
    }

    &:after {
        content: '';
        width: 0;
        height: 0;
        position: absolute;
        top: 19px;
        right: 10px;
        border-top: 10px solid var(--darkTheme);
        border-bottom: 10px solid transparent;
        border-left: 7px solid transparent;
        border-right: 7px solid transparent;
        pointer-events: none;
    }

    @include breakpoint($mediumBreakpoint) {
        width: fit-content;
    }
}

.c-filters__remove {
    color: light-dark(var(--darkTheme), var(--typographyColor));
    transition: background 0.3s ease-out, color 0.3s ease-out;

    svg {
        transform: rotate(45deg);
        fill: light-dark(var(--darkTheme), var(--typographyColor));
        transition: fill 0.3s ease-out;
    }

    @include setInteractive {
        background: var(--darkTheme);
        color: light-dark(var(--lightTheme), white);

        svg {
            fill: light-dark(var(--lightTheme), var(--typographyColor));
        }
    }
}

